impl: transfer data and code generation

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
     "modernizr": "~2.8.1",
-    "qrcode.js": "qrcode#~1.0.2"
+    "qrcodejs": "~0.1.0"
   },
   "overrides": {
     "bootstrap-sass": {
